--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,23 @@
-# Enable mod_rewrite
+# Enable URL rewriting
 RewriteEngine On
 
-# Remove .php extension from URL
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.*?)/?$ $1.php [L,QSA]
+# Set the RewriteBase to root directory (adjust if necessary)
+RewriteBase /
 
-# Remove .html extension from URL
-RewriteCond %{REQUEST_FILENAME} !-d
+# Remove .php extension from product pages in the 'products' folder
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^products/([^/]+)$ /products/$1.php [L]
+
+# Remove .html extension for static pages
 RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.*?)/?$ $1.html [L,QSA]
+RewriteRule ^(index|product|about|contact)$ $1.html [L]
+
+# Redirect requests with .php or .html to clean URLs
+RewriteCond %{THE_REQUEST} \s/(index|product|about|contact)\.php [NC]
+RewriteRule ^ /$1 [R=301,L]
+
+RewriteCond %{THE_REQUEST} \s/products/([^/]+)\.php [NC]
+RewriteRule ^ /products/$1 [R=301,L]
+
+# Handle 404 errors with a custom page
+ErrorDocument 404 /404.html
